# Slicer_agent

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  EXECUTION_FLOW.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SlicerAIAgent.py  SlicerKimiAgent.py  TOOL_CALLING.md  build_RAG.py  requirements.txt  test_prompt_neuroimaging_pipeline.txt  thinking_history.txt
Resources/Info/: version_info.py
Resources/Prompts/: README.md  system_prompt.md
Resources/Skills/: README.md  __init__.py
Resources/UI/: SlicerAIAgent.ui  SlicerKimiAgent.ui
Resources/extension_CLI/BoneReconstructionPlanner/: code_generators.json  generation_log.json  manifest.json  prompt_fragment.md  tool_schemas.json  workflow.json  workflow_metadata.json
Resources/extension_CLI/BoneReconstructionPlanner/debug/: stage_1.5_call_000.json  stage_2_call_001.json  stage_3_call_000.json  stage_4.5_call_002.json  stage_4.9_call_003.json  stage_4_call_001.json  stage_5T_debug.json  stage_6.5_call_012.json  stage_6.5_call_013.json  stage_6.5_call_014.json  stage_6.5_call_015.json  stage_6.5_call_016.json  stage_6.5_call_017.json  stage_6.5_call_018.json  stage_6.5_call_019.json  stage_6_call_004.json  stage_6_call_005.json  stage_6_call_006.json  stage_6_call_007.json  stage_6_call_008.json  stage_6_call_009.json  stage_6_call_010.json  stage_6_call_011.json  stage_7.5_call_013.json  stage_7_call_003.json  stage_7_call_004.json  (+8 more)
Resources/extension_CLI/PelvicFracturePlanning/: code_generators.json  generation_log.json  manifest.json  prompt_fragment.md  step_instructions.json  tool_schemas.json  workflow_metadata.json
Resources/extensions_cookbook/: PelvicFracturePlanning.md
SlicerAIAgentLib/: CodeValidator.py  ConversationStore.py  ExtensionCLIAnalyzer.py  ExtensionCLILoader.py  InteractionManager.py  LLMClient.py  SafeExecutor.py  SkillContextManager.py  SkillIndexer.py  SkillTools.py  WorkflowOrchestrator.py  WorkflowRuntime.py  __init__.py  workflow_state.py
SlicerAIAgentLib/app/: widget.py  widget_correction.py  widget_execution_flow.py  widget_workflow.py
SlicerAIAgentLib/extension_cli_analyzer/: analyzer.py  cookbook_mapping.py  live_revision.py  parameter_metadata.py  prompt_validation.py  scan.py  stage4_decomposition.py  template_helpers.py  validation_contracts.py  validation_semantics.py  workflow_templates.py
SlicerAIAgentLib/extension_cli_loader/: choice_helpers.py  workflow_state.py
SlicerAIAgentLib/llm_client/: tools.py
SlicerKimiAgentLib/: GitHubAPIClient.py  KimiClient.py  OnlineKnowledgeClient.py  SafeExecutor.py  SkillContextManager.py  SkillTools.py  SlicerCodeTemplates.py  __init__.py
Testing/: SlicerAIAgentTest.py  SlicerKimiAgentTest.py
Testing/SlicerAIAgentTests/: analyzer_contracts.py  workflow_tests.py
scripts/: build_rag.py
(+69 files in other folders)
